@@ -32,8 +32,8 @@ terminal when the debugger allows it.
 """
 
 WINDOWS_INSTALL = """BEFORE INSTALLING:
-Please make sure that Gvim is in the PATH, otherwise the installation
-will fail. Use the Control Panel on Windows XP to add the gvim directory
+Please make sure that Vim is in the PATH, otherwise the installation
+will fail. Use the Control Panel on Windows XP to add the vim directory
 to %PATH%:
 Control Panel > System > Advanced tab > Envt Variables > Edit "PATH"
 """
